--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,6 @@
 ---
 ---
-
-@inproceedings{prasanna-arxiv24a,
+@inproceedings{prasanna-rlc24a,
 title = "Dreaming of Many Worlds: Learning Contextual World Models Aids Zero-Shot Generalization",
 abstract = "Zero-shot generalization (ZSG) to unseen dynamics is a major challenge for creating generally capable embodied
  agents. To address the broader challenge, we start with the simpler setting of contextual reinforcement learning (cRL),
@@ -22,7 +21,8 @@ joint_first={true},
 code = {https://github.com/sai-prasanna/dreaming_of_many_worlds},
 booktitle = {Proceedings of the First Reinforcement Learning Conference (RLC'24)},
 note = {To appear},
-openreview = {o8DrRuBsQb}
+openreview = {o8DrRuBsQb},
+pdf = {paper/24_rlc_dreaming_of_many_worlds.pdf}
 }
 
 @inproceedings{shala-automl24a,
