Resort publication buttons

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,5 +1,6 @@
 ---
 ---
+
 @inproceedings{prasanna-rlc24a,
 title = "Dreaming of Many Worlds: Learning Contextual World Models Aids Zero-Shot Generalization",
 abstract = "Zero-shot generalization (ZSG) to unseen dynamics is a major challenge for creating generally capable embodied
@@ -22,7 +23,8 @@ code = {https://github.com/sai-prasanna/dreaming_of_many_worlds},
 booktitle = {Proceedings of the First Reinforcement Learning Conference (RLC'24)},
 note = {To appear},
 openreview = {o8DrRuBsQb},
-pdf = {paper/24_rlc_dreaming_of_many_worlds.pdf}
+pdf = {paper/24_rlc_dreaming_of_many_worlds.pdf},
+selected = {true}
 }
 
 @inproceedings{shala-automl24a,
