--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,28 @@
 ---
 ---
 
+@article{bordne-arxiv24a,
+title = "CANDID DAC: Leveraging Coupled Action Dimensions with Importance Differences in DAC",
+abstract = "High-dimensional action spaces remain a challenge for dynamic algorithm configuration (DAC).
+Interdependencies and varying importance between action dimensions are further known key characteristics of DAC
+problems. We argue that these Coupled Action Dimensions with Importance Differences (CANDID) represent aspects of the
+DAC problem that are not yet fully explored. To address this gap, we introduce a new white-box benchmark within the
+DACBench suite that simulates the properties of CANDID. Further, we propose sequential policies as an effective
+strategy for managing these properties. Such policies factorize the action space and mitigate exponential growth by
+learning a policy per action dimension. At the same time, these policies accommodate the interdependence of action
+dimensions by fostering implicit coordination. We show this in an experimental study of value-based policies on our new
+benchmark. This study demonstrates that sequential policies significantly outperform independent learning of factorized
+policies in CANDID action spaces. In addition, they overcome the scalability limitations associated with learning a
+single policy across all action dimensions. The code used for our experiments is available under
+https://anon-github.automl.cc/r/candidDAC-62D6/.",
+author = "Philipp Bordne and M. Asif Hasan and Eddie Bergman and Noor Awad and André Biedenkapp",
+year = "2024",
+bibtex_show={true},
+arxiv = {arXiv:2407.05789},
+journal = {arXiv:2407.05789},
+code = {https://github.com/PhilippBordne/candidDAC},
+}
+
 @inproceedings{prasanna-rlc24a,
 title = "Dreaming of Many Worlds: Learning Contextual World Models Aids Zero-Shot Generalization",
 abstract = "Zero-shot generalization (ZSG) to unseen dynamics is a major challenge for creating generally capable embodied
