ADD new AutoML Workshop paper and related news

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,7 +1,7 @@
 ---
 ---
 
-@article{bordne-arxiv24a,
+@inproceedings{bordne-automlws24a,
 title = "CANDID DAC: Leveraging Coupled Action Dimensions with Importance Differences in DAC",
 abstract = "High-dimensional action spaces remain a challenge for dynamic algorithm configuration (DAC).
 Interdependencies and varying importance between action dimensions are further known key characteristics of DAC
@@ -16,10 +16,12 @@ policies in CANDID action spaces. In addition, they overcome the scalability lim
 single policy across all action dimensions. The code used for our experiments is available under
 https://github.com/PhilippBordne/candidDAC.",
 author = "Philipp Bordne and M. Asif Hasan and Eddie Bergman and Noor Awad and André Biedenkapp",
+booktitle = {Proceedings of the Third International Conference on Automated Machine Learning (AutoML 2024), Workshop Track},
 year = "2024",
+note = {To appear},
 bibtex_show={true},
+openreview = {ZCCZYfstkG},
 arxiv = {arXiv:2407.05789},
-journal = {arXiv:2407.05789},
 code = {https://github.com/PhilippBordne/candidDAC},
 }
 
@@ -49,11 +51,11 @@ pdf = {paper/24_rlc_dreaming_of_many_worlds.pdf},
 selected = {true}
 }
 
-@inproceedings{shala-automl24a,
+@inproceedings{shala-automlabcd24a,
     title = {HPO-RL-Bench: A Zero-Cost Benchmark for HPO in Reinforcement Learning},
     author = {Gresa Shala and Sebastian Pineda Arango and André Biedenkapp and Frank Hutter and Josif Grabocka},
     year = {2024},
-    booktitle = {Proceedings of the Third International Conference on Automated Machine Learning (AutoML'24)},
+    booktitle = {Proceedings of the Third International Conference on Automated Machine Learning (AutoML'24), ABCD Track},
     bibtex_show={true},
     openreview = {MlB61zPAeR},
     note = {To appear},
