Adapt RLC citation to RLJ as required

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -25,7 +25,7 @@ arxiv = {arXiv:2407.05789},
 code = {https://github.com/PhilippBordne/candidDAC},
 }
 
-@inproceedings{prasanna-rlc24a,
+@article{prasanna-rlc24a,
 title = "Dreaming of Many Worlds: Learning Contextual World Models Aids Zero-Shot Generalization",
 abstract = "Zero-shot generalization (ZSG) to unseen dynamics is a major challenge for creating generally capable embodied
  agents. To address the broader challenge, we start with the simpler setting of contextual reinforcement learning (cRL),
@@ -44,7 +44,11 @@ bibtex_show={true},
 arxiv = {arXiv:2403.10967},
 joint_first={true},
 code = {https://github.com/sai-prasanna/dreaming_of_many_worlds},
-booktitle = {Proceedings of the First Reinforcement Learning Conference (RLC'24)},
+journal={Reinforcement Learning Journal},
+volume={1},
+issue={1},
+year={2024},
+website = {https://rlj.cs.umass.edu/2024/papers/Paper167.html},
 note = {To appear},
 openreview = {o8DrRuBsQb},
 pdf = {paper/24_rlc_dreaming_of_many_worlds.pdf},
