--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -70,7 +70,7 @@ volume={1},
 issue={1},
 year={2024},
 website = {https://rlj.cs.umass.edu/2024/papers/Paper167.html},
-note = {To appear and also be presented at the Seventeenth European Workshop on Reinforcement Learning (EWRL 2024)},
+note = {To also be presented at the Seventeenth European Workshop on Reinforcement Learning (EWRL 2024)},
 openreview = {o8DrRuBsQb},
 pdf = {paper/24_rlc_dreaming_of_many_worlds.pdf},
 selected = {true}
