ADD DOMW poster

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -73,7 +73,8 @@ website = {https://rlj.cs.umass.edu/2024/papers/Paper167.html},
 note = {To also be presented at the Seventeenth European Workshop on Reinforcement Learning (EWRL 2024)},
 openreview = {o8DrRuBsQb},
 pdf = {paper/24_rlc_dreaming_of_many_worlds.pdf},
-selected = {true}
+selected = {true},
+poster = {poster/DOMW_poster.pdf},
 }
 
 @inproceedings{shala-automlabcd24a,
