ADD AutoML talks/posters

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -39,11 +39,12 @@ https://github.com/PhilippBordne/candidDAC.",
 author = "Philipp Bordne and M. Asif Hasan and Eddie Bergman and Noor Awad and André Biedenkapp",
 booktitle = {Proceedings of the Third International Conference on Automated Machine Learning (AutoML 2024), Workshop Track},
 year = "2024",
-note = {To appear},
 bibtex_show={true},
 openreview = {ZCCZYfstkG},
 arxiv = {arXiv:2407.05789},
 code = {https://github.com/PhilippBordne/candidDAC},
+talk={https://www.youtube.com/watch?v=RtdkkK-JIM8&feature=youtu.be},
+poster={poster/poster_candid_dac.pdf},
 }
 
 @article{prasanna-rlc24a,
@@ -84,7 +85,6 @@ poster = {poster/DOMW_poster.pdf},
     booktitle = {Proceedings of the Third International Conference on Automated Machine Learning (AutoML'24), ABCD Track},
     bibtex_show={true},
     openreview = {MlB61zPAeR},
-    note = {To appear},
     code = {https://github.com/releaunifreiburg/HPO-RL-Bench},
     abstract={Despite the undeniable importance of optimizing the hyperparameters of RL algorithms, existing
     state-of-the-art Hyperparameter Optimization (HPO) techniques are not frequently utilized by RL researchers.
@@ -95,7 +95,8 @@ poster = {poster/DOMW_poster.pdf},
     each environment. As a result, our benchmark permits zero-cost experiments for deploying and comparing new HPO
     methods. In addition, the benchmark offers a set of integrated HPO methods, enabling plug-and-play tuning of the
     hyperparameters of new RL algorithms, while pre-computed evaluations allow a zero-cost comparison of a new RL
-    algorithm against the tuned RL baselines in our benchmark.}
+    algorithm against the tuned RL baselines in our benchmark.},
+    talk = {https://www.youtube.com/watch?v=6BQyHNYAQWk&feature=youtu.be},
 }
 
 @article{shala-arxiv24a,
