ADD news about best paper award nomination

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -86,6 +86,7 @@ poster = {poster/DOMW_poster.pdf},
     bibtex_show={true},
     openreview = {MlB61zPAeR},
     code = {https://github.com/releaunifreiburg/HPO-RL-Bench},
+    award = {Awarded runner up for the <a href="https://2024.automl.cc/?page_id=1406">best paper award</a>},
     abstract={Despite the undeniable importance of optimizing the hyperparameters of RL algorithms, existing
     state-of-the-art Hyperparameter Optimization (HPO) techniques are not frequently utilized by RL researchers.
     To catalyze HPO research in RL, we present a new large-scale benchmark that includes pre-computed reward curve
