--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -67,9 +67,10 @@ arxiv = {arXiv:2403.10967},
 joint_first={true},
 code = {https://github.com/sai-prasanna/dreaming_of_many_worlds},
 journal={Reinforcement Learning Journal},
-volume={1},
+volume={3},
 issue={1},
 year={2024},
+pages = {1317--1350},
 website = {https://rlj.cs.umass.edu/2024/papers/Paper167.html},
 note = {To also be presented at the Seventeenth European Workshop on Reinforcement Learning (EWRL 2024)},
 openreview = {o8DrRuBsQb},
