--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,12 +23,12 @@
 },
 
 
-@article{ferreira-arxiv24a,
+@inproceedings{ferreira-owa24a,
   title = {One-shot World Models Using a Transformer Trained on a Synthetic Prior},
   author = {Fabio Ferreira and Moreno Schlageter and Raghu Rajan and André Biedenkapp and Frank Hutter},
   year = "2024",
   bibtex_show={true},
-  journal = {arXiv:2409.14084},
+  booktitle = {NeurIPS 2024 Workshop on Open-World Agents},
   arxiv = {arXiv:2409.14084},
   abstract = "A World Model is a compressed spatial and temporal representation of a real world environment that allows
    one to train an agent or execute planning methods. However, world models are typically trained on observations from
