--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,23 @@
 ---
 ---
 
+@inproceedings{shala-iclr25a,
+  title = {Efficient Cross-Episode Meta-RL},
+  author = {Gresa Shala and André Biedenkapp and Pierre Krack and Florian Walter and Josif Grabocka},
+  year = {2025},
+  bibtex_show={true},
+  booktitle={Proceedings of the Thirteenth International Conference on Learning Representations},
+  abstract = "We introduce Efficient Cross-Episodic Transformers (ECET), a new algorithm for online Meta-Reinforcement
+   Learning that addresses the challenge of enabling reinforcement learning agents to perform effectively in previously
+   unseen tasks. We demonstrate how past episodes serve as a rich source of in-context information, which our model
+   effectively distills and applies to new contexts. Our learned algorithm is capable of outperforming the previous
+   state-of-the-art and provides more efficient meta-training while significantly improving generalization
+   capabilities. Experimental results, obtained across various simulated tasks of the MuJoCo, Meta-World and
+   ManiSkill benchmarks, indicate a significant improvement in learning efficiency and adaptability compared to
+   the state-of-the-art. Our approach enhances the agent's ability to generalize from limited data and paves the
+   way for more robust and versatile AI systems.",
+},
+
 @inproceedings{ndir-ewrl24a,
   title = {Inferring Behavior-Specific Context Improves Zero-Shot Generalization in Reinforcement Learning},
   author = {Tidiane Camaret Ndir and André Biedenkapp and Noor Awad},
