--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -16,6 +16,8 @@
    ManiSkill benchmarks, indicate a significant improvement in learning efficiency and adaptability compared to
    the state-of-the-art. Our approach enhances the agent's ability to generalize from limited data and paves the
    way for more robust and versatile AI systems.",
+  openreview={UENQuayzr1},
+  pdf = {paper/2025_ECTMRL_ICLR.pdf}
 },
 
 @inproceedings{ndir-ewrl24a,
