--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -164,7 +164,7 @@ poster = {poster/DOMW_poster.pdf},
     methods. In addition, the benchmark offers a set of integrated HPO methods, enabling plug-and-play tuning of the
     hyperparameters of new RL algorithms, while pre-computed evaluations allow a zero-cost comparison of a new RL
     algorithm against the tuned RL baselines in our benchmark.},
-    talk = {https://www.youtube.com/watch?v=6BQyHNYAQWk&feature=youtu.be},
+    talk = {https://drive.google.com/file/d/1xAuplrgbY9qp5MU16aN2LExC8sNiAWMe/view?usp=sharing},
 }
 
 @article{shala-arxiv24a,
