--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -165,6 +165,7 @@ poster = {poster/DOMW_poster.pdf},
     hyperparameters of new RL algorithms, while pre-computed evaluations allow a zero-cost comparison of a new RL
     algorithm against the tuned RL baselines in our benchmark.},
     talk = {https://drive.google.com/file/d/1xAuplrgbY9qp5MU16aN2LExC8sNiAWMe/view?usp=sharing},
+    slides = {slides/HPO-RL-Bench.pdf},
 }
 
 @article{shala-arxiv24a,
