add reans paper

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,17 +1,5 @@
 ---
 ---
-@article{hog-tmlr25a,
-    title={Meta-learning Population-based Methods for Reinforcement Learning},
-    author={Johannes Hog and Raghu Rajan and André Biedenkapp and Noor Awad and Frank Hutter and Vu Nguyen},
-    journal = "Transactions on Machine Learning Research",
-    issn = "2835-8856",
-    openreview={d9htascfP8},
-    bibtex_show={true},
-    year={2025},
-    abstract="Reinforcement learning (RL) algorithms are highly sensitive to their hyperparameter settings. Recently, numerous methods have been proposed to dynamically optimize these hyperparameters. One prominent approach is Population-Based Bandits (PB2), which uses time-varying Gaussian processes (GP) to dynamically optimize hyperparameters with a population of parallel agents. Despite its strong overall performance, PB2 experiences slow starts due to the GP initially lacking sufficient information. To mitigate this issue, we propose four different methods that utilize meta-data from various environments. These approaches are novel in that they adapt meta-learning methods to accommodate the time-varying setting. Among these approaches, MultiTaskPB2, which uses meta-learning for the surrogate model, stands out as the most promising approach. It outperforms PB2 and other baselines in both anytime and final performance across two RL environment families.",
-    code={https://github.com/automl/MetaPB2},
-    pdf={paper/TMLR-MetaPB2-2025.pdf}
-}
 
 @inproceedings{nguyen-gecco25a,
   title = {On the Importance of Reward Design in Reinforcement Learning-based Dynamic Algorithm Configuration: A Case Study on OneMax with (1+(λ,λ))-GA},
@@ -43,6 +31,30 @@
   openreview={UENQuayzr1},
   pdf = {paper/2025_ECTMRL_ICLR.pdf},
   code = {https://github.com/machinelearningnuremberg/ECET}
+},
+
+@article{fernandes-arxiv25a,
+title = {A Llama walks into the ’Bar’: Efficient Supervised Fine-Tuning for Legal Reasoning in the Multi-state Bar Exam},
+author = {Rean Fernandes and André Biedenkapp and Frank Hutter and Noor Awad},
+year = {2025},
+journal = {arXiv:2504.04945},
+arxiv = {arXiv:2504.04945},
+bibtex_show={true},
+arxiv = {arXiv:2402.06402},
+code = {https://github.com/ReanFernandes/bar-llama},
+},
+
+@article{hog-tmlr25a,
+    title={Meta-learning Population-based Methods for Reinforcement Learning},
+    author={Johannes Hog and Raghu Rajan and André Biedenkapp and Noor Awad and Frank Hutter and Vu Nguyen},
+    journal = "Transactions on Machine Learning Research",
+    issn = "2835-8856",
+    openreview={d9htascfP8},
+    bibtex_show={true},
+    year={2025},
+    abstract="Reinforcement learning (RL) algorithms are highly sensitive to their hyperparameter settings. Recently, numerous methods have been proposed to dynamically optimize these hyperparameters. One prominent approach is Population-Based Bandits (PB2), which uses time-varying Gaussian processes (GP) to dynamically optimize hyperparameters with a population of parallel agents. Despite its strong overall performance, PB2 experiences slow starts due to the GP initially lacking sufficient information. To mitigate this issue, we propose four different methods that utilize meta-data from various environments. These approaches are novel in that they adapt meta-learning methods to accommodate the time-varying setting. Among these approaches, MultiTaskPB2, which uses meta-learning for the surrogate model, stands out as the most promising approach. It outperforms PB2 and other baselines in both anytime and final performance across two RL environment families.",
+    code={https://github.com/automl/MetaPB2},
+    pdf={paper/TMLR-MetaPB2-2025.pdf}
 },
 
 @inproceedings{ndir-ewrl24a,
