--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
   year = {2025},
   booktitle = {Proceedings of the Genetic and Evolutionary Computation Conference ({GECCO}'25)},
   arxiv = {arXiv:2502.20265},
+    award = {Nominated for the best paper award on the "Learning for Evolutionary Computation" track},
   code = {https://github.com/taindp98/OneMax-DAC}
 },
 
